--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   schedule:
-    - cron: "*/2 * * * *"
+    - cron: "* * * * *"
 
 jobs:
   build:
@@ -14,12 +14,13 @@ jobs:
     
     steps:
     - name: Use Node.js
-      uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
       with:
-        node-version: 14.x
+        node-version: '14'
     - run: npm install
     - run: npm run update-readme
-    - uses: actions/checkout@v2
+    
     - run: |
         git config user.name MoonAntonio
         git config user.email antoniomt.moon@gmail.com
