--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   schedule:
-    - cron: "* * * * *"
+    - cron: "*/2 * * * *"
 
 jobs:
   build:
@@ -13,7 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Use Node.js
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
