--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,7 +5,7 @@ name: Node.js CI
 
 on:
   schedule:
-    - cron: "* * * * *"
+    - cron: "*/2 * * * *"
 
 jobs:
   build:
@@ -18,7 +18,6 @@ jobs:
         node-version: '14'
     - run: npm install
     - run: npm run update-readme
-    
     - run: |
         git config user.name MoonAntonio
         git config user.email antoniomt.moon@gmail.com
