--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,7 @@ jobs:
     - run: npm install
     - run: npm run update-readme
     - run: |
-        git config user.name MoonAntonio
+        git config user.name moonantonio
         git config user.email antoniomt.moon@gmail.com
         git add README.md
         git commit -m "[bot] Autogeneracion del README"
