--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-    "name": "moonantonio",
+    "name": "MoonAntonio",
     "version": "1.0.0",
-    "description": "moonantonio README Github",
+    "description": "Moon Antonio README Github",
     "main": "index.js",
+    "type": "modules",
     "scripts": {
         "update-readme": "node index.js",
-        "test": "echo \"Error: no tets specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/MoonAntonio/MoonAntonio.git"
     },
-    "keywords": [],
-    "author": "",
+    "keywords": [
+        "readme",
+        "github profile",
+        "github readme"
+    ],
+    "author": "Antonio Mateo <antoniomt.moon@gmail.com> (https://moonantonio.github.io/)",
     "license": "ISC",
     "bugs": {
         "url": "https://github.com/MoonAntonio/MoonAntonio/issues"
