--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,8 +4,13 @@
 name: Actualizacion README.md de Perfil ( Node.js CI )
 
 on:
+  push:
+    branches:
+      - master
+  workflow_dispatch:
+  
   schedule:
-    - cron: "* * * * *"
+    - cron: "0 */1 * * *"
 
 jobs:
   build:
@@ -19,7 +24,7 @@ jobs:
     - run: npm install
     - run: npm run update-readme
     - run: |
-        git config user.name Moon Antonio
+        git config user.name moonantonio
         git config user.email pinchodev91@gmail.com
         git add README.md
         diff --quiet && git diff --staged --quiet || git commit -m  "[bot] Autogeneracion del README"
