--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,10 +10,18 @@ on:
     - cron: "0 */4 * * *"
 
 jobs:
-  build:
+  cancelacion:
     runs-on: ubuntu-latest
-
     steps:
+    - name: Cancelar generaciones redundantes
+      uses: styfle/cancel-workflow-action@0.9.1
+      with:
+        access_token: ${{ github.token }}
+  
+  generar:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Generar el README
     - uses: actions/checkout@v2
     - uses: actions/setup-node@v1
       with:
