--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: Update README.md
+name: Actualizar README.md
 
 on:
   push:
@@ -19,6 +19,7 @@ jobs:
         access_token: ${{ github.token }}
   
   generar:
+    needs: [cancelacion]
     runs-on: ubuntu-latest
     steps:
     - name: Generar el README
