--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,5 +34,5 @@ jobs:
         git config user.name moonantonio
         git config user.email antoniomt.moon@gmail.com
         git add README.md
-        git diff --quiet && git diff --staged --quiet || git commit -m "[bot] Update README with latest info"
+        git diff --quiet && git diff --staged --quiet || git commit -m "[bot] Actualizar README.md con las novedades"
         git push origin master
