--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
     - run: npm install
     - run: npm run update-readme
     - run: |
-        git config user.name moonantonio
+        git config user.name ninpl
         git config user.email antoniomt.moon@gmail.com
         git add README.md
         git diff --quiet && git diff --staged --quiet || git commit -m "[bot] Actualizar README.md con las novedades"
