--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Generar github-contribution-grid-snake.svg
       uses: Platane/snk/svg-only@v2
       with:
-        github_user_name: ${{ ninpl }}
+        github_user_name: ${{ github.repository_owner }}
         outputs: |
           /github-contribution-grid-snake.svg
     - name: Configurar node.js
