--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,11 +25,20 @@ jobs:
     - name: Generar el README
       uses: actions/checkout@v3
     - name: Generar github-contribution-grid-snake.svg
-      uses: Platane/snk/svg-only@v2
+      uses: Platane/snk@v2
       with:
         github_user_name: ${{ github.repository_owner }}
         outputs: |
-          /github-user-contribution.svg
+          dist/github-snake.svg
+          dist/github-snake-dark.svg?palette=github-dark
+          dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+    - name: push github-contribution-grid-snake.svg to the output branch
+      uses: crazy-max/ghaction-github-pages@v2.5.0
+      with:
+          target_branch: output
+          build_dir: dist
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Configurar node.js
       uses: actions/setup-node@v3
       with:
